<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="text"
        android:text="@string/create_profile_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toStartOf="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:background="@null"
        android:textAppearance="@android:style/TextAppearance.Holo" />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignStart="@+id/full_name"
        android:layout_below="@+id/full_name"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/birthday"
        android:focusable="false"
        android:layout_alignEnd="@+id/full_name"
        android:background="@null"
        android:textAppearance="@android:style/TextAppearance.Holo" />

    <EditText
        android:id="@+id/medical_history"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:hint="@string/medical_history"
        android:textColorHint="@color/white"
        android:layout_below="@+id/date_of_birth"
        android:layout_alignStart="@+id/date_of_birth"
        android:layout_alignEnd="@+id/date_of_birth"
        android:background="@null"
        android:textAppearance="@android:style/TextAppearance.Holo" />

    <EditText
        android:id="@+id/allergies"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignStart="@+id/medical_history"
        android:layout_below="@+id/medical_history"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/allergies"
        android:layout_alignEnd="@+id/medical_history"
        android:background="@null"
        android:textAppearance="@android:style/TextAppearance.Holo" />

    <Button
        android:id="@+id/save_profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/allergies"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_background"
        android:text="@string/create"
        android:textColor="@color/white" />

</RelativeLayout>